link canonical + title

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/css/style.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <title>À la française, Restaurant - Ohmyfood by Julien Penna</title>
     <link
       rel="stylesheet"
@@ -13,19 +13,23 @@
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-   >
+    />
+    <link
+      rel="canonical"
+      href="https://ohmyfood.julienpenna.com/a-la-francaise"
+    />
   </head>
   <body>
     <header>
       <nav>
-       <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
-       <a href="index.html"><h1>ohmyfood</h1></a>
-       <!-- <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"></a> -->
+        <a href="index.html"><i class="fa-solid fa-arrow-left"></i></a>
+        <a href="index.html"><h1>ohmyfood</h1></a>
+        <!-- <a href="index.html"><img src="images/logo/ohmyfood.png" alt="logo ohmyfood" class="logo"></a> -->
       </nav>
       <img
         src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
         alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
-     >
+      />
     </header>
 
     <div class="menu">
@@ -36,112 +40,112 @@
       </div>
 
       <div class="dishes">
-      <div class="starters appearance">
-        <h3>ENTRÉES</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Tartare de poulpe acidulé</h4>
-          <div class="description-price">
-            <p class="description">Aux zestes d'orange</p>
-            <span class="price">25€</span>
+        <div class="starters appearance">
+          <h3>ENTRÉES</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Tartare de poulpe acidulé</h4>
+            <div class="description-price">
+              <p class="description">Aux zestes d'orange</p>
+              <span class="price">25€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
+
+          <div class="card-dish appearance dish2">
+            <h4>Velouté de légumes d'antan</h4>
+            <div class="description-price">
+              <p class="description">Carotte, panais, topinambour</p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish3">
+            <h4>Soupe à l'oignon</h4>
+            <div class="description-price">
+              <p class="description">Revisitée</p>
+              <span class="price">20€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+        </div>
+        <div class="main-course appearance">
+          <h3>PLATS</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Coquilles Saint-Jacques</h4>
+            <div class="description-price">
+              <p class="description">Accompagnées d'une purée de panais</p>
+              <span class="price">40€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish2">
+            <h4>Magret de canard</h4>
+            <div class="description-price">
+              <p class="description">Et parmentier de pommes de terre</p>
+              <span class="price">35€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
+          </div>
+
+          <div class="card-dish appearance dish3">
+            <h4>Pigeonneau d'Ille-et-Vilaine</h4>
+            <div class="description-price">
+              <p class="description">Sur son lit de gnocchis aux légumes</p>
+              <span class="price">44€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
         </div>
 
-        <div class="card-dish appearance dish2">
-          <h4>Velouté de légumes d'antan</h4>
-          <div class="description-price">
-            <p class="description">Carotte, panais, topinambour</p>
-            <span class="price">35€</span>
+        <div class="desserts appearance">
+          <h3>DESSERTS</h3>
+          <div class="card-dish appearance dish1">
+            <h4>Pétales de violettes glacés</h4>
+            <div class="description-price">
+              <p class="description">Et purée de noisettes</p>
+              <span class="price">18€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
 
-        <div class="card-dish appearance dish3">
-          <h4>Soupe à l'oignon</h4>
-          <div class="description-price">
-            <p class="description">Revisitée</p>
-            <span class="price">20€</span>
+          <div class="card-dish appearance dish2">
+            <h4>Fondant au chocolat</h4>
+            <div class="description-price">
+              <p class="description">Revisité</p>
+              <span class="price">22€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-      </div>
-      <div class="main-course appearance">
-        <h3>PLATS</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Coquilles Saint-Jacques</h4>
-          <div class="description-price">
-            <p class="description">Accompagnées d'une purée de panais</p>
-            <span class="price">40€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
 
-        <div class="card-dish appearance dish2">
-          <h4>Magret de canard</h4>
-          <div class="description-price">
-            <p class="description">Et parmentier de pommes de terre</p>
-            <span class="price">35€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish3">
-          <h4>Pigeonneau d'Ille-et-Vilaine</h4>
-          <div class="description-price">
-            <p class="description">Sur son lit de gnocchis aux légumes</p>
-            <span class="price">44€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
+          <div class="card-dish appearance dish3">
+            <h4>Millefeuille croustillant</h4>
+            <div class="description-price">
+              <p class="description">Myrtille et pâte d'amande</p>
+              <span class="price">23€</span>
+            </div>
+            <div class="dish-animation">
+              <i class="fa-solid fa-circle-check"></i>
+            </div>
           </div>
         </div>
-      </div>
-
-      <div class="desserts appearance">
-        <h3>DESSERTS</h3>
-        <div class="card-dish appearance dish1">
-          <h4>Pétales de violettes glacés</h4>
-          <div class="description-price">
-            <p class="description">Et purée de noisettes</p>
-            <span class="price">18€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish2">
-          <h4>Fondant au chocolat</h4>
-          <div class="description-price">
-            <p class="description">Revisité</p>
-            <span class="price">22€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-
-        <div class="card-dish appearance dish3">
-          <h4>Millefeuille croustillant</h4>
-          <div class="description-price">
-            <p class="description">Myrtille et pâte d'amande</p>
-            <span class="price">23€</span>
-          </div>
-          <div class="dish-animation">
-            <i class="fa-solid fa-circle-check"></i>
-          </div>
-        </div>
-      </div>
       </div>
 
       <div class="order">
