--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/css/style.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <title>Ohmyfood! Paris by Julien Penna</title>
     <link
       rel="stylesheet"
@@ -13,7 +13,8 @@
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-   >
+    />
+    <link rel="canonical" href="https://ohmyfood.julienpenna.com" />
   </head>
   <body>
     <header>
@@ -58,12 +59,12 @@
       <section class="restaurants">
         <h3>Restaurants</h3>
         <div class="grid-restos">
-          <a href="la-palette-du-gout.html"
+          <a href="la-palette-du-gout.html" title="resto La palette du goût"
             ><div class="card-resto">
               <img
                 src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
                 alt="Fines tranches de saumon et verdure dans assiette en céramique"
-             >
+              />
               <div class="new">Nouveau</div>
               <div class="container">
                 <div class="resto-place-fav">
@@ -77,12 +78,12 @@
               </div>
             </div>
           </a>
-          <a href="la-note-enchantee.html">
+          <a href="la-note-enchantee.html" title="resto La note enchantée">
             <div class="card-resto">
               <img
                 src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
                 alt="Boulettes de viande dans assiette en céramique blanche"
-             >
+              />
               <div class="new">Nouveau</div>
               <div class="container">
                 <div class="resto-place-fav">
@@ -97,12 +98,12 @@
             </div>
           </a>
 
-          <a href="a-la-francaise.html">
+          <a href="a-la-francaise.html" title="resto À la française">
             <div class="card-resto">
               <img
                 src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                 alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
-             >
+              />
               <div class="container">
                 <div class="resto-place-fav">
                   <div class="resto">
@@ -116,12 +117,12 @@
             </div>
           </a>
 
-          <a href="le-delice-des-sens.html">
+          <a href="le-delice-des-sens.html" title="resto Le délice des sens">
             <div class="card-resto">
               <img
                 src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
                 alt="poisson servi dans son assiette en forme de barque"
-             >
+              />
               <div class="container">
                 <div class="resto-place-fav">
                   <div class="resto">
@@ -137,20 +138,20 @@
         </div>
       </section>
     </main>
-<!-- LOADER  -->
+    <!-- LOADER  -->
     <div class="spinner">
       <div class="bg-icons">
         <div class="icons">
-          <img src="images/icons/couverts-icon.png" alt="couverts">
+          <img src="images/icons/couverts-icon.png" alt="couverts" />
           <img
             src="images/icons/cloche-serveur-icon.png"
             alt="cloche serveur"
-         >
-          <img src="images/icons/chef-cook.png" alt="toque chef">
+          />
+          <img src="images/icons/chef-cook.png" alt="toque chef" />
         </div>
       </div>
     </div>
-<!-- FIN LOADER  -->
+    <!-- FIN LOADER  -->
     <footer>
       <h6>ohmyfood</h6>
       <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
