--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="public/css/style.css">
-    <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="public/css/style.css" />
+    <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
     <title>Le délice des sens, Restaurant - Ohmyfood by Julien Penna</title>
     <link
       rel="stylesheet"
@@ -13,7 +13,11 @@
       integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-   >
+    />
+    <link
+      rel="canonical"
+      href="https://ohmyfood.julienpenna.com/le-delice-des-sens"
+    />
   </head>
   <body>
     <header>
@@ -25,7 +29,7 @@
       <img
         src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
         alt="viande crue avec crème et légumes feuillus sur une assiette ronde en céramique blanche"
-     >
+      />
     </header>
 
     <div class="menu">
