link canonical corrected with .html

--- a/a-la-francaise.html
+++ b/a-la-francaise.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="canonical"
-      href="https://ohmyfood.julienpenna.com/a-la-francaise"
+      href="https://ohmyfood.julienpenna.com/a-la-francaise.html"
     />
   </head>
   <body>
