--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="canonical"
-      href="https://ohmyfood.julienpenna.com/la-note-enchantee"
+      href="https://ohmyfood.julienpenna.com/la-note-enchantee.html"
     />
   </head>
   <body>
