--- a/la-palette-du-gout.html
+++ b/la-palette-du-gout.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="canonical"
-      href="https://ohmyfood.julienpenna.com/la-palette-du-gout"
+      href="https://ohmyfood.julienpenna.com/la-palette-du-gout.html"
     />
   </head>
   <body>
