--- a/le-delice-des-sens.html
+++ b/le-delice-des-sens.html
@@ -16,7 +16,7 @@
     />
     <link
       rel="canonical"
-      href="https://ohmyfood.julienpenna.com/le-delice-des-sens"
+      href="https://ohmyfood.julienpenna.com/le-delice-des-sens.html"
     />
   </head>
   <body>
